Alignemnt fixes

--- a/app/design/frontend/Dyode/curacao/Magento_Catalog/web/css/source/_add-to-cart.less
+++ b/app/design/frontend/Dyode/curacao/Magento_Catalog/web/css/source/_add-to-cart.less
@@ -350,8 +350,8 @@
         font-size: 16px;
         font-family: 'iCuracao-Regular';
         font-weight: 600;
-        padding-top: 10px;
         border-bottom: none !important;
+        padding: 10px 5px;
         @media all and (min-width: 768px) {
           padding-left: 3rem;
           padding-right: 3rem;
@@ -364,7 +364,7 @@
         font-weight: bold;
         width: 70px;
         @media all and (max-width: 767px) {
-        width: 40px;
+        width: 50px;
         }
         &:before{
          margin-top: 6px;
@@ -385,8 +385,6 @@
       padding-right: 0 !important;
     }
     .product-details{
-      //// TODO: check nad remove conflict
-      //  padding: 10px 0 10px 0;
       padding: 0px 0 20px 0;
       margin-top: 20px;
       width: 100%;
@@ -394,10 +392,40 @@
       max-height: 400px;
       overflow: auto;
       @media all and (max-width: 767px) {
-              //// TODO: check nad remove conflict
-          //padding: 5px;
         padding: 10px 5px;
         max-height: 300px;
+      }
+      .message{
+
+        .error{
+          font-size: 1.3rem;
+          position: relative;
+          color: #6f4400;
+
+          background: #fdf0d5;
+          margin: 0 0 10px;
+          padding: 12px 20px 12px 45px;
+          &::before{
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            font-size: 24px;
+            line-height: 24px;
+            color: #c07600;
+            content: '\e602';
+            font-family: 'luma-icons';
+            margin: -12px 0 0;
+            vertical-align: middle;
+            display: inline-block;
+            font-weight: normal;
+            overflow: hidden;
+            speak: none;
+            left: 10px;
+            top: 21px;
+            width: 30px;
+            position: absolute;
+            text-align: center;
+          }
+        }
       }
       .top-section{
         clear: both;
